--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,11 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css");
+
+body {
+    background-color: rgb(0, 0, 0);
+    text-align: center;
+    color: aliceblue;
+}
+
+h3 {
+    color: rgb(22, 112, 238);
+}
